--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <body oncontextmenu="return false" ondragstart="return false" onselectstart="return false">
+<title>Negretti Informática</title>
 <body>
 
 	<center>
