--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
 	<a href="http://twitter.com/vcnegretti" target="_blank"><img border="0" src="http://icons.iconarchive.com/icons/dakirby309/windows-8-metro/48/Web-Twitter-alt-2-Metro-icon.png" /></a>
 	<a href="http://instagram.com/vcnegretti" target="_blank"><img border="0" src="http://icons.iconarchive.com/icons/designbolts/free-instagram/48/Active-Instagram-1-icon.png" /></a>
 	<a href="http://linkedin.com/in/vcnegretti" target="_blank"><img border="0" src="http://icons.iconarchive.com/icons/danleech/simple/48/linkedin-icon.png" /></a>
+	
+	<script type="text/javascript" id="clstr_globe" src="//cdn.clustrmaps.com/globe.js?d=TrpIpYM4rromqBUlVE15eAgOKs1KGd4Y1RU_Qz3Oxxk"></script>
 	</center>
 	
 </body>
