--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
 	<a href="http://linkedin.com/in/vcnegretti" target="_blank"><img border="0" src="http://icons.iconarchive.com/icons/danleech/simple/48/linkedin-icon.png" /></a>
 		
 		</br>
-	<script type='text/javascript' id='clustrmaps' src='//cdn.clustrmaps.com/map_v2.js?cl=080808&w=450&t=tt&d=TrpIpYM4rromqBUlVE15eAgOKs1KGd4Y1RU_Qz3Oxxk&co=ffffff&ct=808080&cmo=3acc3a&cmn=ff5353'></script>	</center>
-	
+	<script type='text/javascript' id='clustrmaps' src='//cdn.clustrmaps.com/map_v2.js?cl=080808&w=300&t=tt&d=TrpIpYM4rromqBUlVE15eAgOKs1KGd4Y1RU_Qz3Oxxk&co=ffffff&ct=808080&cmo=3acc3a&cmn=ff5353'></script>
+	<center>
+		
 </body>
 </html>
