--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
 <body>
 
 	<center>
-		<a href="http://fb.me/negretti.informatica" target="_blank">
+		<a href="http://fb.me/negrettinfo" target="_blank">
 			<img src="imagens/Negretti Logo Preto.png" width="800" height="300" />
 		</a>
 
 	<h1 style="text-align:center;">Um novo conceito em Informática!</h1>
 	
 	<p style="text-align:center;">Copyright © 2018 Victor A. C. Negretti | CNPJ 25.695.572/0001-63 | Todos os direitos reservados.</p>
-	<p style="text-align:center;">Telegram / WhatsApp: (51) 984770507</p>
+	<p style="text-align:center;">Telegram | WhatsApp: (51) 984770507</p>
 	
 	<a href="http://fb.me/vcnegretti" target="_blank"><img border="0" src="http://icons.iconarchive.com/icons/danleech/simple/48/facebook-icon.png" /></a>
 	<a href="http://twitter.com/vcnegretti" target="_blank"><img border="0" src="http://icons.iconarchive.com/icons/dakirby309/windows-8-metro/48/Web-Twitter-alt-2-Metro-icon.png" /></a>
