--- a/index.html
+++ b/index.html
@@ -19,8 +19,10 @@
 	<a href="http://twitter.com/vcnegretti" target="_blank"><img border="0" src="http://icons.iconarchive.com/icons/dakirby309/windows-8-metro/48/Web-Twitter-alt-2-Metro-icon.png" /></a>
 	<a href="http://instagram.com/vcnegretti" target="_blank"><img border="0" src="http://icons.iconarchive.com/icons/designbolts/free-instagram/48/Active-Instagram-1-icon.png" /></a>
 	<a href="http://linkedin.com/in/vcnegretti" target="_blank"><img border="0" src="http://icons.iconarchive.com/icons/danleech/simple/48/linkedin-icon.png" /></a>
-		
+	
 		</br>
+	
+	<a href="http://validador.ipv6.br/index.php?lang=pt&site=vcnegretti.github.io&uri=referer"><img alt="Este S&iacute;tio Web &eacute; acess&iacute;vel via IPv6!" src="http://validador.ipv6.br/ipv6-globo.php"></a>
 	<script type='text/javascript' id='clustrmaps' src='//cdn.clustrmaps.com/map_v2.js?cl=080808&w=300&t=tt&d=TrpIpYM4rromqBUlVE15eAgOKs1KGd4Y1RU_Qz3Oxxk&co=ffffff&ct=808080&cmo=3acc3a&cmn=ff5353'></script>
 	<center>
 		
