--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 	
 		</br>
 	
-	<a href="http://validador.ipv6.br/index.php?lang=pt&site=vcnegretti.github.io&uri=referer"><img alt="Este S&iacute;tio Web &eacute; acess&iacute;vel via IPv6!" src="http://validador.ipv6.br/ipv6-globo.php"></a>
+	<a href="http://validador.ipv6.br/index.php?lang=pt&site=vcnegretti.github.io&uri=referer"><img  alt="Este S&iacute;tio Web &eacute; acess&iacute;vel via IPv6!" src="http://validador.ipv6.br/imgBani/banipv61branco.png"></a>
 	<script type='text/javascript' id='clustrmaps' src='//cdn.clustrmaps.com/map_v2.js?cl=080808&w=300&t=tt&d=TrpIpYM4rromqBUlVE15eAgOKs1KGd4Y1RU_Qz3Oxxk&co=ffffff&ct=808080&cmo=3acc3a&cmn=ff5353'></script>
 	<center>
 		
