--- a/index.html
+++ b/index.html
@@ -2,22 +2,22 @@
 <html>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <body oncontextmenu="return false" ondragstart="return false" onselectstart="return false">
-<title>Negretti Informática</title>
+<title>tracerti</title>
 <body>
 
 	<center>
-		<a href="http://fb.me/negrettinfo" target="_blank">
-			<img src="imagens/Negretti Logo Preto.png" width="800" height="300" />
+		<a href="http://fb.me/tracerti" target="_blank">
+			<img src="imagens/tracerti.png" width="800" height="300" />
 		</a>
 
-	<h1 style="text-align:center;">Um novo conceito em Informática!</h1>
+	<h1 style="text-align:center;">Soluções em Tecnologia</h1>
 	
-	<p style="text-align:center;">Copyright © 2018 Victor A. C. Negretti | CNPJ 25.695.572/0001-63 | Todos os direitos reservados.</p>
+	<p style="text-align:center;">Copyright © 2020 Victor A. C. Negretti | CNPJ 25.695.572/0001-63 | Todos os direitos reservados.</p>
 	
-	<a href="http://fb.me/vcnegretti" target="_blank"><img border="0" src="http://icons.iconarchive.com/icons/danleech/simple/48/facebook-icon.png" /></a>
-	<a href="http://twitter.com/vcnegretti" target="_blank"><img border="0" src="http://icons.iconarchive.com/icons/dakirby309/windows-8-metro/48/Web-Twitter-alt-2-Metro-icon.png" /></a>
-	<a href="http://instagram.com/vcnegretti" target="_blank"><img border="0" src="http://icons.iconarchive.com/icons/designbolts/free-instagram/48/Active-Instagram-1-icon.png" /></a>
-	<a href="http://linkedin.com/in/vcnegretti" target="_blank"><img border="0" src="http://icons.iconarchive.com/icons/danleech/simple/48/linkedin-icon.png" /></a>
+	<a href="http://fb.me/tracerti" target="_blank"><img border="0" src="http://icons.iconarchive.com/icons/danleech/simple/48/facebook-icon.png" /></a>
+	<a href="http://twitter.com/tracerti" target="_blank"><img border="0" src="http://icons.iconarchive.com/icons/dakirby309/windows-8-metro/48/Web-Twitter-alt-2-Metro-icon.png" /></a>
+	<a href="http://instagram.com/tracerti" target="_blank"><img border="0" src="http://icons.iconarchive.com/icons/designbolts/free-instagram/48/Active-Instagram-1-icon.png" /></a>
+	<a href="http://linkedin.com/in/company/tracerti" target="_blank"><img border="0" src="http://icons.iconarchive.com/icons/danleech/simple/48/linkedin-icon.png" /></a>
 	
 		</br>
 	
