--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
 <body oncontextmenu="return false" ondragstart="return false" onselectstart="return false">
 <title>tracerti</title>
 <body>
-
+	background-color: #e78403
 	<center>
 		<a href="http://fb.me/tracerti" target="_blank">
-			<img src="imagens/tracerti.png" width="800" height="300" />
+			<img src="imagens/tracerti.png" />
 		</a>
 
 	<h1 style="text-align:center;">Soluções em Tecnologia</h1>
