--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <body oncontextmenu="return false" ondragstart="return false" onselectstart="return false">
 <title>tracerti</title>
 <body>
-	background-color: #e78403
+	<background-color: #e78403>
 	<center>
 		<a href="http://fb.me/tracerti" target="_blank">
 			<img src="imagens/tracerti.png" />
