--- a/index.html
+++ b/index.html
@@ -3,9 +3,8 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <body oncontextmenu="return false" ondragstart="return false" onselectstart="return false">
 <title>tracerti</title>
-<body>
+<body background-color: #e78403;>
 	<center>
-		background-color: #e78403;
 		<a href="http://fb.me/tracerti" target="_blank">
 			<img src="imagens/tracerti.png" />
 		</a>
