--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <body oncontextmenu="return false" ondragstart="return false" onselectstart="return false">
-<title>tracerti</title>
+<title>>_ tracerti</title>
 <body background-color: #e78403;>
 	<center>
 		<a href="http://fb.me/tracerti" target="_blank">
