--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <body oncontextmenu="return false" ondragstart="return false" onselectstart="return false">
-<title>>_ tracerti</title>
-<body background-color: #e78403>
+<title>tracerti</title>
+<body bgcolor="#e78403">
 	<center>
 		<a href="http://fb.me/tracerti" target="_blank">
 			<img src="imagens/tracerti.png" />
