--- a/index.html
+++ b/index.html
@@ -4,12 +4,10 @@
 <body oncontextmenu="return false" ondragstart="return false" onselectstart="return false">
 <title>tracerti</title>
 <body bgcolor="#e78403">
-	<center>
+	<div align="center">
 		<a href="http://fb.me/tracerti" target="_blank">
 			<img src="imagens/tracerti.png" />
 		</a>
-
-	style="text-align:center;"
 		
 	<a href="http://fb.me/tracerti" target="_blank"><img border="0" src="http://icons.iconarchive.com/icons/danleech/simple/48/facebook-icon.png" /></a>
 	<a href="http://twitter.com/tracerti" target="_blank"><img border="0" src="http://icons.iconarchive.com/icons/dakirby309/windows-8-metro/48/Web-Twitter-alt-2-Metro-icon.png" /></a>
@@ -18,7 +16,7 @@
 	
 		</br>
 	<p style="text-align:center;">Copyright © 2020 Chaves & Negretti | CNPJ 25.695.572/0001-63 | Todos os direitos reservados.</p>
-	<center>
+	</div>
 	<!--	
 	<a href="http://validador.ipv6.br/index.php?lang=pt&site=vcnegretti.github.io&uri=referer"><img  alt="Este S&iacute;tio Web &eacute; acess&iacute;vel via IPv6!" src="http://validador.ipv6.br/imgBani/banipv61branco.png"></a>
 	<script type='text/javascript' id='clustrmaps' src='//cdn.clustrmaps.com/map_v2.js?cl=080808&w=300&t=tt&d=TrpIpYM4rromqBUlVE15eAgOKs1KGd4Y1RU_Qz3Oxxk&co=ffffff&ct=808080&cmo=3acc3a&cmn=ff5353'></script>
@@ -26,4 +24,3 @@
 	-->
 </body>
 </html>
-
