--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
 <body oncontextmenu="return false" ondragstart="return false" onselectstart="return false">
 <title>tracerti</title>
 <body bgcolor="#e78403">
-<div class="block">    
-    <div class="centered">
+<center>
 		<a href="http://fb.me/tracerti" target="_blank">
 			<img src="imagens/tracerti.png" />
 		</a>
@@ -18,8 +17,7 @@
 	
 		</br>
 	<p style="text-align:center;">Copyright © 2020 Chaves & Negretti | CNPJ 25.695.572/0001-63 | Todos os direitos reservados.</p>
-</div>  
-</div>
+</center>
 	<!--	
 	<a href="http://validador.ipv6.br/index.php?lang=pt&site=vcnegretti.github.io&uri=referer"><img  alt="Este S&iacute;tio Web &eacute; acess&iacute;vel via IPv6!" src="http://validador.ipv6.br/imgBani/banipv61branco.png"></a>
 	<script type='text/javascript' id='clustrmaps' src='//cdn.clustrmaps.com/map_v2.js?cl=080808&w=300&t=tt&d=TrpIpYM4rromqBUlVE15eAgOKs1KGd4Y1RU_Qz3Oxxk&co=ffffff&ct=808080&cmo=3acc3a&cmn=ff5353'></script>
