--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
 		<a href="http://linkedin.com/in/company/tracerti" target="_blank"><img border="0" src="http://icons.iconarchive.com/icons/danleech/simple/48/linkedin-icon.png" /></a>
 	
 		</br>
+	<footer>
 	<p style="text-align:center;">Copyright © 2020 Chaves & Negretti | CNPJ 25.695.572/0001-63 | Todos os direitos reservados.</p>
+	</footer>
 </center>
 	<!--	
 	<a href="http://validador.ipv6.br/index.php?lang=pt&site=vcnegretti.github.io&uri=referer"><img  alt="Este S&iacute;tio Web &eacute; acess&iacute;vel via IPv6!" src="http://validador.ipv6.br/imgBani/banipv61branco.png"></a>
