--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 		<a href="http://fb.me/tracerti" target="_blank"><img border="0" src="http://icons.iconarchive.com/icons/danleech/simple/48/facebook-icon.png" /></a>
 		<a href="http://twitter.com/tracerti" target="_blank"><img border="0" src="http://icons.iconarchive.com/icons/dakirby309/windows-8-metro/48/Web-Twitter-alt-2-Metro-icon.png" /></a>
 		<a href="http://instagram.com/tracerti" target="_blank"><img border="0" src="http://icons.iconarchive.com/icons/designbolts/free-instagram/48/Active-Instagram-1-icon.png" /></a>
-		<a href="http://linkedin.com/in/company/tracerti" target="_blank"><img border="0" src="http://icons.iconarchive.com/icons/danleech/simple/48/linkedin-icon.png" /></a>
+		<a href="http://linkedin.com/company/tracerti" target="_blank"><img border="0" src="http://icons.iconarchive.com/icons/danleech/simple/48/linkedin-icon.png" /></a>
 	
 		</br>
 	<div class="footer">
