--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <title>tracerti</title>
 <body bgcolor="#e78403">
 <center>
-		<a href="http://fb.me/tracerti" target="_blank">
+		<a href="http://www.tracerti.com.br" target="_blank">
 			<img src="imagens/tracerti.png" />
 		</a>
 		</br>
