--- a/index.html
+++ b/index.html
@@ -823,6 +823,7 @@
 
             <ul class="copyright">
                <li>&copy; Copyright 2020 Victor A. C. Negretti</li>
+		<li> All rights reserved.</li>
                <li>Design by <a href="http://www.styleshout.com/" title="Styleshout" target="_blank">Styleshout</a></li>   
             </ul>
 
